--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,9 +7,9 @@ assembly_info:
   assembly_file_version: '{version}'
   assembly_informational_version: '{version}'
 before_build:
-- ps: nuget restore Source\Log4net.Appender.Serilog.sln
+- ps: nuget restore Source\Log4net.Appender.Serilog\Log4net.Appender.Serilog.sln
 build:
-  project: Source\Log4net.Appender.Serilog.sln
+  project: Source\Log4net.Appender.Serilog\Log4net.Appender.Serilog.sln
   verbosity: minimal
 after_build:
 - ps: >-
