--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@ configuration: Release
 pull_requests:
   do_not_increment_build_number: true
 image:
-- Visual Studio 2019
+- Visual Studio 2022
 - Ubuntu
 dotnet_csproj:
   patch: true
@@ -26,4 +26,4 @@ for:
   build_script:
   - ps: dotnet build Source\Log4net.Appender.Serilog\Log4net.Appender.Serilog.csproj --framework netstandard2.0
   test_script:
-  - ps: dotnet test Source\Log4net.Appender.Serilog.Tests\Log4net.Appender.Serilog.Tests.csproj --framework netcoreapp2.0
+  - ps: dotnet test Source\Log4net.Appender.Serilog.Tests\Log4net.Appender.Serilog.Tests.csproj --framework net6.0
